fixing wraps on mobile, closes #131

--- a/less/app.less
+++ b/less/app.less
@@ -813,5 +813,7 @@ footer {
 		padding: 33px 20px;
 		h1 { font-size: 36px; }
 	}
+    .detail .small-header p { font-size:11px; }
+    .detail .detail-count {font-size:18px;}
 	footer { border-top: 1px solid #CCC; margin-top: 24px; }
 }
